# partition

./: .gitignore  CMakeLists.txt
source/: CMakeLists.txt
source/include/: list_partition.hpp  partition.hpp
source/include/gch/partition/: dependent_partition.hpp  list_partition.hpp  partition.hpp  vector_partition.hpp
source/include/gch/partition/internal/: integer_sequence.hpp
source/test/: CMakeLists.txt  main.cpp
source/test/list/: CMakeLists.txt  main.cpp
